one more attempt to fix close modal on iphone

--- a/css/modal.css
+++ b/css/modal.css
@@ -61,7 +61,7 @@
   position: absolute;
   background-color: #222222;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.3);
-  font-size: 18px;
+  font-size: 13px;
   font-family: sans-serif;
   color: white;
   cursor: pointer;
